Check gnupg data operations (encryption/decryption, signing/verifying) for additional performance improvements.
Description
Description
Revisions and Commits
Revisions and Commits
| rG GnuPG | |||
| rGe92812a4752e g10/decrypt-data: disable output estream buffering to reduce overhead | |||
| rG15df88d135ba iobuf: add zerocopy optimization for iobuf_read | |||
| rGb96eb6f08d1d iobuf: add zerocopy optimization for iobuf_write | |||
| rG99e2c178c73c g10/cipher-aead: add fast path for avoid memcpy when AEAD encrypting | |||
| rG49c6e5839452 gpg: fix --enarmor with zero length source file | |||
| rG6c95d52a22a7 g10/decrypt-data: disable output estream buffering to reduce overhead | |||
| rG583b664a07b4 g10/plaintext: disable estream buffering in binary mode | |||
| rGf2322ff942fa Use iobuf buffer size for temporary buffer size | |||
Event Timeline
Comment Actions Patch for AEAD encryption speed improvement. 1.9x speed increase for AES256.OCB can be seen on Ryzen 5800X (2.2GB/s to 4.2GB/s) by avoiding memcpy on fast path. (second version of patch in subtask)